# Gester

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  pyproject.toml
examples/: checker.py  example_game.py  example_swipe.py  pointer_example.py  sound_example.py
games/: SimonSays.py  __init__.py  gallery.py  pong.py  test_game.py
games/2048/: 2048.py  color_resolve.py  logic_funcs.py
games/SimonSays/: SimonSays.py
games/Tomodachi/: Drake.py  Tomodachi.py  spawner.py
games/box-stacker/: box_stacker.py  config.py  scene.py  spawner.py
games/hand-visualizer/: hand_visualization.py
games/pong/: pong.py
games/slot-machine/: config.py  crosshair.py  slots.py  tiles.py
src/: main.py  test.py
src/gester/: Entity.py  Game.py  GestureInput.py  Rect.py  SimonSays.py  SwipeDetector.py  Text.py  __init__.py  attributes.py  sounds.py
