[tool.poetry]
name = "gester"
version = "0.1.0"
description = ""
authors = ["AlexHunton2 <alexhunton02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
pygame = "^2.5.2"
ruff = "0.1.2"
gestures = {path = "gesturelibrary", develop = true} 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
